@@ -118,6 +118,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Peter Rochen
   Oota Toshiya
   ribbon
+  Daniel Shahaf
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
